--- a/acheter4.html
+++ b/acheter4.html
@@ -137,7 +137,7 @@
     <label for="Name of Product">Nom Du Produit</label>
           <select name="Name of Product" id="Name of Product" class="form-control"required >
             <option value="">Selectioner un Produit</option>
-      <option value=""></option>
+      <option value="1">farouk</option>
       <option value=""></option>
       <option value=""></option>
       <option value=""></option>
