--- a/acheter1.html
+++ b/acheter1.html
@@ -150,7 +150,7 @@
       <label for="productName">Nom du Produit </label>
       <select name="productName" id="ProductName" class="form-control" required>
   <option value="">Selectioner un Produit</option>
-  <option value=""></option>
+  <option value="1">abcd</option>
  <option value=""></option>
  <option value=""></option>
  <option value=""></option>
