--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
                     <a class="nav-link" href="#Accueil"><i class="fas fa-home"></i> Accueil</a>
                 </div>
                <div class="nav-item">
-                    <a class="nav-link" href="a propos.html" target="_blank"><i class="fas fa-info-circle"></i> À propos</a> 
+                    <a class="nav-link" href="about.html" target="_blank"><i class="fas fa-info-circle"></i> À propos</a> 
                  </div>
                 <div class="nav-item">
                     <a class="nav-link" href="#our products">
