--- a/index.html
+++ b/index.html
@@ -553,6 +553,9 @@
             .product-price {
                 font-size: 1rem;
             }
+            .product-actions{
+                gap: 5px;
+            }
             .add-to-cart {
                 padding: 4px 8px;
                 font-size: 0.6rem;
