--- a/index.html
+++ b/index.html
@@ -544,6 +544,7 @@
                 font-size: 5px;
             }
             .product-name {
+                white-space: nowrap;
                 font-size: 10px;
             }
 
@@ -554,7 +555,8 @@
                 font-size: 1rem;
             }
             .product-actions{
-                gap: 5px;
+
+                gap: 3px;
             }
             .add-to-cart {
                 padding: 4px 8px;
