--- a/index.html
+++ b/index.html
@@ -543,16 +543,21 @@
                 margin: 0 auto;
                 font-size: 5px;
             }
+            .product-category{
+                font-size: 2rem;
+                white-space: nowrap;
+            }
             .product-name {
                 white-space: nowrap;
                 font-size: 10px;
             }
 
+
             .product-img {
                 height: 150px;
             }
             .product-price {
-                font-size: 1rem;
+                font-size: 0.8rem;
             }
             .product-actions{
 
@@ -560,10 +565,10 @@
             }
             .add-to-cart {
                 padding: 4px 8px;
-                font-size: 0.6rem;
+                font-size: 0.8rem;
             }
             .product-details {
-                font-size: 0.6rem;
+                font-size: 0.8rem;
             }
 
           
