acheter 5 et 6 new files

--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@
             <!-- Product 2 -->
             <div class="product-card">
                 <div class="product-img">
-                    <img src="" alt=  >
+                    <img src=""  >
                 </div>
                 <div class="product-info">
                     <div class="product-category">  </div>
@@ -666,7 +666,7 @@
             <!-- Product 3 -->
             <div class="product-card">
                 <div class="product-img">
-                    <img src="https://images.unsplash.com/photo-1599750037739-08b92b436c70?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=500&q=80" alt="Ventilateur">
+                    <img src="" >
                 </div>
                 <div class="product-info">
                     <div class="product-category">  </div>
@@ -682,14 +682,14 @@
             <!-- Product 4 -->
             <div class="product-card">
                 <div class="product-img">
-                     <img src="              " alt="">
+                     <img src="              " >
                 </div>
                 <div class="product-info">
                     <div class="product-category">      </div>
                     <h3 class="product-name">       </h3>
                     <div class="product-price">          </div>
                     <div class="product-actions">
-                        <button class="add-to-cart" data-name="        " data-price="    ">Acheter</button>
+                      <a href="acheter4.html">  <button class="add-to-cart" data-name="        " data-price="    ">Acheter</button></a>
                         <a href="#" class="product-details">Détails</a>
                     </div>
                 </div>
@@ -698,14 +698,14 @@
             <!-- Product 5 -->
             <div class="product-card">
                 <div class="product-img">
-                    <img src="" alt="Couverture">
+                    <img src="" >
                 </div>
                 <div class="product-info">
                     <div class="product-category">Hiver</div>
                     <h3 class="product-name">     </h3>
                     <div class="product-price">   </div>
                     <div class="product-actions">
-                        <a href="acheter4.html"><button class="add-to-cart" data-name="" data-price="">Acheter</button></a>
+                        <a href="acheter5.html"><button class="add-to-cart" data-name="" data-price="">Acheter</button></a>
                         <a href="#" class="product-details">Détails</a>
                     </div>
                 </div>
@@ -714,14 +714,14 @@
             <!-- Product 6 -->
             <div class="product-card">
                 <div class="product-img">
-                    <img src="https://images.unsplash.com/photo-1591047139829-d91aecb6caea?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=500&q=80" alt="Écharpe">
+                    <img src="" alt="Écharpe">
                 </div>
                 <div class="product-info">
-                    <div class="product-category">Automne</div>
-                    <h3 class="product-name">Écharpe en Laine</h3>
-                    <div class="product-price">1 800 DA</div>
+                    <div class="product-category">     </div>
+                    <h3 class="product-name">          </h3>
+                    <div class="product-price">      </div>
                     <div class="product-actions">
-                        <button class="add-to-cart" data-name="Écharpe en Laine" data-price="1800">Acheter</button>
+                      <a href="acheter6.html"><button class="add-to-cart" data-name="" data-price="">Acheter</button></a>
                         <a href="#" class="product-details">Détails</a>
                     </div>
                 </div>
