--- a/index.html
+++ b/index.html
@@ -563,6 +563,9 @@
         padding: 15px;
         justify-items: center;
     }
+    .logo h1{
+        white-space: nowrap;
+    }
 
     .product-card {
         width: 100%;
