--- a/index.html
+++ b/index.html
@@ -676,11 +676,11 @@
             <!-- Product 1 -->
               <div class="product-card">
                 <div class="product-img">
-                    <img src="" alt=  >
+                    <img src="produit/ENTRER SCOLAIRE/127772-3-5-600x600.jpg" alt=  >
                 </div>
                 <div class="product-info">               
                     <h3 class="product-name">Cartable </h3>
-                    <div class="product-price">70000 DA</div>
+                    <div class="product-price">4500 DA</div>
                     <div class="product-actions">
                        <a href="acheter1.html"> <button  class="add-to-cart" data-name="" data-price="">Acheter</button></a>
                         <a href="#details 1.html" class="product-details">Détails</a>
