--- a/index.html
+++ b/index.html
@@ -759,7 +759,7 @@
                     <div class="product-price">      </div>
                     <div class="product-actions">
                       <a href="acheter6.html"><button class="add-to-cart" data-name="" data-price="">Acheter</button></a>
-                        <a href="#" class="product-details">Détails</a>
+                        <a href="#detail6" class="product-details">Détails</a>
                     </div>
                 </div>
             </div>
