--- a/index.html
+++ b/index.html
@@ -692,7 +692,7 @@
             <!-- Product 2 -->
             <div class="product-card">
                 <div class="product-img">
-                    <img src=""  >
+                    <img src="produit/Projector-2-Game-7.jpg"  >
                 </div>
                 <div class="product-info">   
                     <h3 class="product-name">     </h3>
