--- a/index.html
+++ b/index.html
@@ -644,16 +644,17 @@
                     <a class="nav-link" href="about.html" target="_blank"><i class="fas fa-info-circle"></i> À propos</a> 
                  </div>
                 <div class="nav-item">
-                    <a class="nav-link" href="#our products">
+                    <a class="nav-link" href="#dropdown-content">
                         <i class="fas fa-boxes"></i> Nos produits <i class="fas fa-chevron-down"></i>
                     </a>
-                    <div class="dropdown-content">
-                        <a href="#"><i class="fas fa-seedling"></i> Printemps</a>
-                        <a href="#"><i class="fas fa-sun"></i> Été</a>
-                        <a href="#"><i class="fas fa-snowflake"></i> Hiver</a>
-                        <a class="ren" href="#"><i class="fa-solid fa-book"></i>&nbsp;Rentrée scolaire</a>
+                 <div class="dropdown-content"> 
+                        <a href="#dropdown-content"><i class="fas fa-seedling"></i> Printemps</a>
+                        <a href="#dropdown-content"><i class="fas fa-sun"></i> Été</a>
+                        <a href="#dropdown-content"><i class="fas fa-snowflake"></i> Hiver</a>
+                        <a class="ren" href="#dropdown-content"><i class="fa-solid fa-book"></i>&nbsp;Rentrée scolaire</a>
                     </div>
-                </div>           
+                </div>  
+                  </div>          
     </header>
   
 
@@ -672,8 +673,9 @@
     <section id="products">
         <h2 class="section-title">Produits Populaires</h2>
         
-        <div class="products-grid">
-            <!-- Product 1 -->
+        <div id="dropdown-content" class="products-grid">
+          
+            <!-- Product 1 --> 
               <div class="product-card">
                 <div class="product-img">
                     <img src="produit/ENTRER SCOLAIRE/127772-3-5-600x600.jpg" alt=  >
