--- a/index.html
+++ b/index.html
@@ -168,12 +168,13 @@
         .banner {
             background: linear-gradient(rgba(18, 18, 18, 0.8), rgba(18, 18, 18, 0.9)), url('https://images.unsplash.com/photo-1607082348824-0a96f2a4b9da?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1200&q=80');
             background-size: cover;
-            background-position: center;
-            height: 500px;
+            background-position: center ;
+            height: 400px;
+            right: 200px;
             display: flex;
             align-items: center;
             color: var(--text-light);
-            text-align: center;
+           text-align: center;
         }
 
         .banner-content {
@@ -779,7 +780,7 @@
                 <p>Season-Deals_DZ est votre destination pour tous les produits saisonniers en Algérie. Nous offrons une large sélection de produits pour chaque saison avec une livraison rapide et fiable.</p>
                 <div class="social-icons">
                     <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-                     <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+                     <a href="https://www.instagram.com/season_deals.2026/" class="social-icon"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
             
@@ -807,7 +808,7 @@
                 </div>
         
         <div class="copyright">
-            <p>&copy; <span style="color:    rgb(231, 233, 184);" > 2025 Season-Deals_DZ. Tous droits réservés.</span></p>
+            <p>&copy; <span style="color:    rgb(195, 195, 192);" > 2025 Season-Deals_DZ. Tous droits réservés.</span></p>
         </div>
     </footer>
 
