--- a/index.html
+++ b/index.html
@@ -680,10 +680,10 @@
             <!-- Product 1 --> 
               <div class="product-card">
                 <div class="product-img">
-                    <img src="produit/ENTRER SCOLAIRE/127772-3-5-600x600.jpg" alt=  >
+                    <img src="produit/Rentrée scolaire/Warm-Blower-Pepoun-cnc.jpg" alt=  >
                 </div>
                 <div class="product-info">               
-                    <h3 class="product-name">Cartable </h3>
+                    <h3 class="product-name"> </h3>
                     <div class="product-price">4500 DA</div>
                     <div class="product-actions">
                        <a href="acheter1.html"> <button  class="add-to-cart" data-name="" data-price="">Acheter</button></a>
@@ -696,11 +696,11 @@
             <!-- Product 2 -->
             <div class="product-card">
                 <div class="product-img">
-                    <img src="produit/Projector-2-Game-7.jpg"  >
+                    <img src="produit/Rentrée scolaire/Radiateur-noir-cnc.jpg"  >
                 </div>
                 <div class="product-info">   
-                    <h3 class="product-name">     </h3>
-                    <div class="product-price">   </div>
+                    <h3 class="product-name">  Mini Radiateur   </h3>
+                    <div class="product-price"> 3800 DA  </div>
                     <div class="product-actions">
                       <a href="acheter2.html">  <button class="add-to-cart" data-name="" data-price="">Acheter</button></a>
                         <a href="#detail 2.html" class="product-details">Détails</a>
