--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
                 </div>
                 <div class="product-info">               
                     <h3 class="product-name"> </h3>
-                    <div class="product-price">4500 DA</div>
+                    <div class="product-price">3000 DA</div>
                     <div class="product-actions">
                        <a href="acheter1.html"> <button  class="add-to-cart" data-name="" data-price="">Acheter</button></a>
                         <a href="#details 1.html" class="product-details">Détails</a>
@@ -780,7 +780,7 @@
                 <p>Season-Deals_DZ est votre destination pour tous les produits saisonniers en Algérie. Nous offrons une large sélection de produits pour chaque saison avec une livraison rapide et fiable.</p>
                 <div class="social-icons">
                     <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-                     <a href="https://www.instagram.com/season_deals.2026/" class="social-icon"><i class="fab fa-instagram"></i></a>
+                     <a href="https://www.instagram.com/season_deals.dz_/" class="social-icon"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
             
